--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,8 @@
         <p id="lastday">你昨天打了 <span id="lastdayNum" class="bold">-</span> 次，今天<span id="todayNotYet" class="bold">没有完成任务！</span><span id="todayDone" class="bold">完成任务辣。</span></p>
     </div>
     <style type="text/css">
-    #lastdaym #todayDone {
+    #lastdaym,
+    #todayDone {
         display: none;
     }
 
